@@ -4,6 +4,9 @@
   definitions ending with two question marks instead of
   one. [bug=984258]
 
+* Print a warning on HTMLParseErrors to let people know they should
+  install a better parser library.
+
 = 4.0.4 (20120416) =
 
 * Fixed a bug that sometimes created disconnected trees.
